# activitypubdantic

./: .gitignore  LICENSE  README.md  activitypubdantic_test.py  create_docs.sh  developer_requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: distribute.yaml  python_package.yaml  test.yaml
activitypubdantic/: __init__.py  get_class.py  get_model.py
activitypubdantic/models/: __init__.py  activity.py  actor.py  core.py  link.py  object.py
activitypubdantic/models/_utils/: language_types.py  mime_types.py
docs/: get_class.html  get_model.html  index.html
docs/activitypubdantic/: get_model.html
docs/activitypubdantic/models/: actor.html  core.html  index.html
docs/models/: activity.html  actor.html  core.html  link.html  object.html
json/activitypub/: article.json  create.json  like.json  note.json  person.json
json/activitystreams/: accept.json  add.json  article.json  collection.json  image.json  move.json  person.json  place.json  question.json  tombstone.json
json/mastodon/: accept.json  create.json  follow.json  person.json  poll.json
