[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "activitypubdantic"
version = "0.0.1"
authors = [
  { name="Joe Wlos", email="joewlos17@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pydantic>=2.0.2"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/joewlos/activitypubdantic"
"Documentation" = "https://www.joewlos.com/activitypubdantic/"